# hotwired-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  mise.toml  package-lock.json  package.json
.github/workflows/: release.yml
.husky/: pre-commit
docs/designs/: CLI_INBOX_OUTBOX_IMPLEMENTATION.md  HOTWIRED_CORE_GAP_ANALYSIS.md
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
scripts/: postinstall.js  update-version.js
src/: ipc.rs  main.rs
src/commands/: artifact.rs  auth.rs  complete.rs  hotwire.rs  impediment.rs  inbox.rs  internal.rs  mod.rs  pair.rs  protocol.rs  run.rs  send.rs  session.rs  status.rs  validate.rs
