[package]
name = "hotwired-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Hotwired multi-agent workflow orchestration"
license = "MIT"

[[bin]]
name = "hotwired-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
thiserror = "1"
anyhow = "1"
